--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "author": "WebDesign Master",
     "license": "ISC",
     "devDependencies": {
+        "@popperjs/core": "^2.4.0",
         "bootstrap": "^4.4.1",
         "browser-sync": "^2.26.7",
         "del": "^5.1.0",
@@ -22,6 +23,8 @@
         "gulp-rsync": "0.0.8",
         "gulp-sass": "^4.1.0",
         "gulp-stylus": "^2.7.0",
-        "gulp-uglify-es": "^2.0.0"
-    }
+        "gulp-uglify-es": "^2.0.0",
+        "jquery": "^3.5.1"
+    },
+    "dependencies": {}
 }
